# examples

./: .gitignore  CMakeLists.example.template.cmake  CMakeLists.txt  Makefile  OpenCMISS.cmake  README.rst  build.py  build.template  conf.py  create_cmakelists.py  examplesBuilder.py  examplesLogger.py  examplesTester.py  glossary.rst  nesi.py  nesi.template  noseMain.py  noseTester.py
Bioelectrics/Monodomain/: CMakeLists.txt  FHN.xml  Makefile  OpenCMISS.cmake  visualise.com
Bioelectrics/Monodomain/Fortran/: CMakeLists.txt  Makefile  n98.xml
Bioelectrics/Monodomain/Python/: Monodomain2DSquare.py  README.rst
Bioelectrics/Monodomain/src/: MonodomainExample.f90
Bioelectrics/MonodomainTP06/: CMakeLists.txt  Makefile
Bioelectrics/MonodomainTP06/Fortran/: CMakeLists.txt
Bioelectrics/MonodomainTP06/src/: MonodomainTP06Example.f90
Bioelectrics/Monodomain_Shiqiang/: CMakeLists.txt  Makefile  lindblad_murphey_clark_giles_1996.xml  maltsev_rate_modulation.xml
Bioelectrics/Monodomain_Shiqiang/Fortran/: CMakeLists.txt
Bioelectrics/Monodomain_Shiqiang/src/: Monodomain_ShiqiangExample.f90
ClassicalField/Laplace/Laplace/: CMakeLists.txt  Makefile  OpenCMISS.cmake  nightlytest.json  visualise.com
DataAssimilation/DataAssimilationInflationGuccione/: CMakeLists.txt  Diagnostics.diag  Makefile  NewExampleMakefile
DataAssimilation/DataAssimilationInflationGuccione/Fortran/: CMakeLists.txt
DataAssimilation/DataAssimilationInflationGuccione/src/: DataAssimilationInflationGuccioneExample.f90
DataAssimilation/DataAssimilationUniExtension/: CMakeLists.txt  Diagnostics.diag  Makefile_UniAxialExtension  Makefile_data_assimilation  current_error_message.txt  make_estimation_uniextension  make_opencmiss_test  make_opencmiss_uniextension  output
DataAssimilation/DataAssimilationUniExtension/Fortran/: CMakeLists.txt
DataAssimilation/DataAssimilationUniExtension/src/: UniAxialExtensionExample.f90  data_assimilation_uniextension.cpp
FiniteElasticity/: CMakeLists.txt  Makefile
FiniteElasticity/ActiveContraction/: CMakeLists.txt  Makefile
FiniteElasticity/ActiveContraction/Fortran/: CMakeLists.txt
FiniteElasticity/ActiveContraction/data/: hollowcylq-221.in  hollowcylq-221.in.gpactiv  hollowcylq-842.in  hollowcylq-842.in.gpactiv  lvq-842.in  lvq-842.in.gpactiv
FiniteElasticity/ActiveContraction/output/: excoords_only.rb
FiniteElasticity/ActiveContraction/src/: ActiveContractionExample.f90
FiniteElasticity/ActiveContractionCH2QL/: Makefile
FiniteElasticity/ActiveContractionCH2QL/data/: cubic.in
FiniteElasticity/ActiveContractionCH2QL/src/: ActiveContractionCH2QLExample.f90
FiniteElasticity/Cantilever/: Makefile  nightlytest.prop  visualise.com
FiniteElasticity/Cantilever/Fortran/: .gitignore  CMakeLists.txt  Makefile  nesi.ll  nightlytest.json
FiniteElasticity/Cantilever/Python/: CantileverExample.py  nightlytest.json
FiniteElasticity/Cantilever/src/: CantileverExample.f90  CantileverExample.py
FiniteElasticity/CantileverGrowth/: CantileverGrowthExample.py  mooneyrivlin.cellml  simplegrowth.cellml  visualise.com
FiniteElasticity/CellMLGrowthLaw/: CellMLGrowthExample.py  stressgrowth.cellml  visualise.com
FiniteElasticity/ConvergenceStudy/: Makefile  show.com
FiniteElasticity/ConvergenceStudy/src/: MooneyRivlinInCellMLExample.f90
FiniteElasticity/CuboidGeneric/: CMakeLists.txt  Makefile  input1
FiniteElasticity/CuboidGeneric/Fortran/: CMakeLists.txt
FiniteElasticity/CuboidGeneric/src/: CuboidGenericExample.f90
FiniteElasticity/CylinderInflation/: CMakeLists.txt  Makefile  Visualise.com  nightlytest.json  nightlytest.prop
FiniteElasticity/CylinderInflation/Fortran/: CMakeLists.txt
FiniteElasticity/CylinderInflation/massif_outputs/: massif.out.18459
FiniteElasticity/CylinderInflation/outputs/: CylinderInflation.part0.exelem
FiniteElasticity/CylinderInflation/src/: CylinderInflationExample.f90
FiniteElasticity/DofConstraints/: .gitignore  DofConstraintsExample.py  nightlytest.json  visualise.com
FiniteElasticity/GuccioneCube/: README.md  guccione.cellml  plot.py  run.py  simulation.py  view-unit-cube.com
FiniteElasticity/HermiteProlateSpheroid/: HermiteProlateSpheroidExample.py  nightlytest.json  prolate_spheroid_geometry.py  visualise.com
FiniteElasticity/HomogeneousPipeAxialExtension/: HomogeneousPipeAxialExtension.py  README.rst  exfile.py  hetrogenouscylinder.exregion  mooney_rivlin.xml  quadcylinderthreematerials.py  viewAxialStretchResults.com
FiniteElasticity/LVContraction/Python/: LVContraction.py  ellipse_benchmark_lin_2-8-8.exelem  exfile.py  lib.py  nightlytest.json
FiniteElasticity/LVInflation/Python/: ConvertToVTK.py  LVInflation.py  SpatialConvergence.py  benchmark_ellipse_linear.m  benchmark_te_linear.py  ellipse_benchmark_lin_2-16-16.exelem  exportNodesElems.m  (+8 more)
FiniteElasticity/LargeUniAxialExtension/: .gitignore  Makefile
FiniteElasticity/MeasureStrain/: MeasureStrainExample.py  nightlytest.json
FiniteElasticity/MixedBoundaryConditions/: CMakeLists.txt  Makefile
FiniteElasticity/MooneyRivlinInCellML/: CMakeLists.txt  Makefile  README.rst
FiniteElasticity/QuadraticEllipsoid/: CMakeLists.txt  Makefile
FiniteElasticity/QuadraticEllipsoidCosta/: CMakeLists.txt  Makefile
FiniteElasticity/QuadraticEllipsoidCostaReadIn/: CMakeLists.txt  Makefile  Parameters.par
FiniteElasticity/TriCubicAxialExtension/: CMakeLists.txt  Makefile  Visualise.com  nightlytest.prop
FiniteElasticity/TriQuadraticCube/: CMakeLists.txt  Makefile  show.com
FiniteElasticity/TwoElementTriLinear/: Makefile
FiniteElasticity/UniAxialExtension/: .gitignore  Makefile  nightlytest.prop
FiniteElasticity/UniAxialExtensionCompressible/: CMakeLists.txt  Makefile
FiniteElasticity/UniAxialExtensionLoadIncrements/: CMakeLists.txt  Makefile
FiniteElasticity/UniAxialExtensionOrthotropic/: CMakeLists.txt  Makefile
FiniteElasticity/UniAxialExtensionTetrahedrons/: Makefile
FiniteElasticity/src/: FiniteElasticityExample.f90
FiniteElasticity/testingPoints/: CMakeLists.txt  Makefile  nightlytest.prop  weeklytest.json  weeklytest.prop
(+2852 files in other folders)
